--- a/BuildSwap/nl_nl.properties
+++ b/BuildSwap/nl_nl.properties
@@ -31,6 +31,9 @@ buildswap.scoreboard.timeRemaining=Tijd over
 buildswap.scoreboard.swap=Wissel!
 buildswap.scoreboard.hurry=Schiet op!
 
+buildswap.tab.header=§bWelkom bij Grian Netwerk BuildSwap!
+buildswap.tab.footer=§bRangen, Huisdieren, Spookjes en meer:
+
 theme.angel=Een engel
 theme.axe=Een bijl
 theme.baby=Een baby
