--- a/BuildSwap/pt_br.properties
+++ b/BuildSwap/pt_br.properties
@@ -31,6 +31,9 @@ buildswap.scoreboard.timeRemaining=Tempo restante
 buildswap.scoreboard.swap=Troque para o outro lado!
 buildswap.scoreboard.hurry=Se apresse!
 
+buildswap.tab.header=§bWelcome to Grian Network BuildSwap!
+buildswap.tab.footer=§bRanks, Pets, Spirit Animals and more:
+
 theme.angel=Um anjo
 theme.axe=Um machado 
 theme.baby=Um bebê 
