--- a/BuildSwap/sv_se.properties
+++ b/BuildSwap/sv_se.properties
@@ -31,6 +31,9 @@ buildswap.scoreboard.timeRemaining=Time remaining
 buildswap.scoreboard.swap=Swap to the other side!
 buildswap.scoreboard.hurry=Hurry!
 
+buildswap.tab.header=§bWelcome to Grian Network BuildSwap!
+buildswap.tab.footer=§bRanks, Pets, Spirit Animals and more:
+
 theme.angel=An angel
 theme.axe=An axe
 theme.baby=A baby
