--- a/pt_br.properties
+++ b/pt_br.properties
@@ -22,47 +22,47 @@ feedback.word.after=Depois
 feedback.word.statistics=Estatísticas
 feedback.word.with=com
 feedback.word.by=por
-feedback.word.wasHurtFor=was hurt for
-feedback.word.change.weather=change the weather
-feedback.word.emeralds=Emeralds
-feedback.word.win=Win
-feedback.word.tie=Tie
-feedback.word.voted=Voted
-feedback.word.ago=ago
-feedback.word.rewardSummary=Reward Summary
-feedback.word.gameEnded=The game has ended!
-feedback.word.youHaveEarned=You've earned
-feedback.word.winner=Winner
-feedback.word.winners=Winners
-feedback.word.players=Players
+feedback.word.wasHurtFor=foi machucado por 
+feedback.word.change.weather=mudar o clima
+feedback.word.emeralds=Esmeraldas
+feedback.word.win=Vitória
+feedback.word.tie=Empate
+feedback.word.voted=Votado
+feedback.word.ago=atrás
+feedback.word.rewardSummary=Resumo das Recompensas 
+feedback.word.gameEnded=O jogo terminou!
+feedback.word.youHaveEarned=Você ganhou 
+feedback.word.winner=Ganhador
+feedback.word.winners=Ganhadores
+feedback.word.players=Jogadores
 
-error.invalid.slot.item=§cError: Invalid %s item!
+error.invalid.slot.item=§cError: Item %s inválido!
 
-slot.head=Helmet
-slot.body=Body
-slot.legs=Legs
-slot.feet=Boots
-slot.hand.main.item=Item in Hand
-slot.hand.off.item=Item in Offhand
+slot.head=Capacete
+slot.body=Corpo
+slot.legs=Pernas
+slot.feet=Botas
+slot.hand.main.item=Item em mãos
+slot.hand.off.item=Item em sua outra mão
 slot.name=Name
 
-example.message.colour.line1=§6Type the name that you would like the entity to have.
-example.message.colour.line2=§6You can use colour coding.
+example.message.colour.line1=§6Digite o nome que você deseja que a entidade tenha.
+example.message.colour.line2=§6Você pode usar colour coding.
 example.message.colour.line3=§6Example: '&cBob'.
 
-plot.error.you.no.plot=§c You don't have a plot. You can load it with '/plot home'.
-plot.error.player.no.plot=§c %s doesn't have a plot.
-plot.error.no.owner=§c This plot has no owner.
-plot.error.no.plot.found=§c No plot found.
-plot.error.no.plot.world=§c This is not a plot world.
-plot.error.that.not.plot.world=§c That world is not a plot world or does not exist.
-plot.error.you.notAllowedTo.thisPlot=§c You are not allowed to %s on this plot.
+plot.error.you.no.plot=§c Você não tem um plot. Você pode carregá-lo com '/plot home'.
+plot.error.player.no.plot=§c %s não tem um plot.
+plot.error.no.owner=§c Esse plot não tem dono.
+plot.error.no.plot.found=§c Nenhum plot encontrado.
+plot.error.no.plot.world=§c Esse não é um mundo de plots.
+plot.error.that.not.plot.world=§c Esse mundo não é um de plots ou não existe.
+plot.error.you.notAllowedTo.thisPlot=§c Não é permitido que você %s nesse plot.
 
 gui.button.word.set=§6Set
 
 game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Creative]
-game.alreadyStarted.spectator=§f The game has already started, so you were put in spectator mode.
-game.compass.usage=§f Click with the compass to spectate the players.
+game.alreadyStarted.spectator=§f O jogo já começou, então você foi colocado em modo expectador.
+game.compass.usage=§f Clique com a bússola para assistir os jogadores. 
 
-game.scoreboard.playingOn=You're playing on
+game.scoreboard.playingOn=Você está jogando em
