--- a/BuildSwap/pt_br.properties
+++ b/BuildSwap/pt_br.properties
@@ -31,8 +31,8 @@ buildswap.scoreboard.timeRemaining=Tempo restante
 buildswap.scoreboard.swap=Troque para o outro lado!
 buildswap.scoreboard.hurry=Se apresse!
 
-buildswap.tab.header=§bWelcome to Grian Network BuildSwap!
-buildswap.tab.footer=§bRanks, Pets, Spirit Animals and more:
+buildswap.tab.header=§bBem-vindo ao Grian Network BuildSwap!
+buildswap.tab.footer=§bRanks, Animais de Estimação, Fantasmas e mais:
 
 theme.angel=Um anjo
 theme.axe=Um machado 
