--- a/pt_br.properties
+++ b/pt_br.properties
@@ -44,11 +44,11 @@ slot.legs=Pernas
 slot.feet=Botas
 slot.hand.main.item=Item em mãos
 slot.hand.off.item=Item em sua outra mão
-slot.name=Name
+slot.name=Nome
 
 example.message.colour.line1=§6Digite o nome que você deseja que a entidade tenha.
 example.message.colour.line2=§6Você pode usar colour coding.
-example.message.colour.line3=§6Example: '&cBob'.
+example.message.colour.line3=§6Exemplo: '&cJoão'.
 
 plot.error.you.no.plot=§c Você não tem um plot. Você pode carregá-lo com '/plot home'.
 plot.error.player.no.plot=§c %s não tem um plot.
@@ -58,11 +58,11 @@ plot.error.no.plot.world=§c Esse não é um mundo de plots.
 plot.error.that.not.plot.world=§c Esse mundo não é um de plots ou não existe.
 plot.error.you.notAllowedTo.thisPlot=§c Não é permitido que você %s nesse plot.
 
-gui.button.word.set=§6Set
+gui.button.word.set=§6Setar
 
 game.prefix.buildswap=§9[BuildSwap]
 game.prefix.creative=§9[Creative]
 game.alreadyStarted.spectator=§f O jogo já começou, então você foi colocado em modo expectador.
-game.compass.usage=§f Clique com a bússola para assistir os jogadores. 
+game.compass.usage=§f Clique com a bússola para assistir os jogadores.
 
 game.scoreboard.playingOn=Você está jogando em
