--- a/sv_se.properties
+++ b/sv_se.properties
@@ -28,13 +28,13 @@ feedback.word.emeralds=Smaragder
 feedback.word.win=Vinst
 feedback.word.tie=Lika poäng
 feedback.word.voted=Röstade
-feedback.word.ago=ago
-feedback.word.rewardSummary=Reward Summary
-feedback.word.gameEnded=The game has ended!
-feedback.word.youHaveEarned=You've earned
-feedback.word.winner=Winner
-feedback.word.winners=Winners
-feedback.word.players=Players
+feedback.word.ago=sedan
+feedback.word.rewardSummary=Summering av Belöningar
+feedback.word.gameEnded=Spelet har avslutats!
+feedback.word.youHaveEarned=Du har tjänat
+feedback.word.winner=Vinnare
+feedback.word.winners=Vinnare
+feedback.word.players=Spelare
 
 error.invalid.slot.item=§cFel: Ogiltigt %s föremål!
 
@@ -65,4 +65,4 @@ game.prefix.creative=§9[Kreativ]
 game.alreadyStarted.spectator=§f Spelet har redan startat, så du sattes i åskådarläge.
 game.compass.usage=§fKlicka med kompassen för att åskåda spelare.
 
-game.scoreboard.playingOn=You're playing on
+game.scoreboard.playingOn=Du spelar på
