--- a/pl_pl.properties
+++ b/pl_pl.properties
@@ -28,13 +28,13 @@ feedback.word.emeralds=Szmaragdy
 feedback.word.win=Wygrana
 feedback.word.tie=Remis
 feedback.word.voted=Zagłosowano
-feedback.word.ago=ago
-feedback.word.rewardSummary=Reward Summary
-feedback.word.gameEnded=The game has ended!
-feedback.word.youHaveEarned=You've earned
-feedback.word.winner=Winner
-feedback.word.winners=Winners
-feedback.word.players=Players
+feedback.word.ago=temu
+feedback.word.rewardSummary=Podsumowanie Nagród
+feedback.word.gameEnded=Gra się skończyła!
+feedback.word.youHaveEarned=Zarobiłeś
+feedback.word.winner=Zwycięzca
+feedback.word.winners=Zwycięzcy
+feedback.word.players=Gracze
 
 error.invalid.slot.item=§cError: Nieprawidłowy %s przedmiot!
 
