--- a/BuildSwap/pl_pl.properties
+++ b/BuildSwap/pl_pl.properties
@@ -6,33 +6,33 @@ buildswap.opponentLeft=§fTwój przeciwnik opuścił grę! Szukamy następnego p
 buildswap.feedback.cannotVote.spectator=Obserwatorzy nie mogą głosować!
 buildswap.feedback.cannotVote.side=Nie wolno ci głosować za tą stroną!
 buildswap.feedback.voted=§f Zagłosowano!
-buildswap.feedback.foundPartnerNoTransfer=§f We found you another partner! Sadly we couldn't transfer your build, so you were given the build of another player. It's something!
-buildswap.feedback.foundPartner=§f We found you another partner!
-buildswap.feedback.opponentsLeft=§f Your opponent(s) left, so you were put into spectator mode.
-buildswap.game.start.aboutToBegin=§cWe are about to begin BuildSwap
-buildswap.game.start.themesAreRandom=§cAll themes are random
-buildswap.game.start.getReady=§cGet ready
-buildswap.game.start.yourTheme=§cYour theme is:
-buildswap.round.tie=§cIt's a tie!
-buildswap.round.won=§c%s won!
-buildswap.round.swap=§cSwap!
-buildswap.round.swap.force=§cI said swap!
-buildswap.round.build=§cBUILD!
-buildswap.round.secondsRemaining=seconds remaining
-buildswap.round.over=§cRound %s Over
-buildswap.game.end=§cGame ended!
-buildswap.voting.end=§cVoting finished!
-buildswap.voting.start=§cTime to vote!
-buildswap.voting.start.info=§cClick any side to vote for it
+buildswap.feedback.foundPartnerNoTransfer=§f Znaleźliśmy ci nowego partnera! Niestety, nie mogliśmy ci przenieść budowy, więc dostałeś budowe innego gracza. Lepsze niż nic!
+buildswap.feedback.foundPartner=§f Znaleźliśmy ci nowego partnera!
+buildswap.feedback.opponentsLeft=§f Twój/Twoji przeciwnik/przeciwnicy opuścił/opuścili gre, więc zostałeś przeniesiony/a na tryb obserwatora.
+buildswap.game.start.aboutToBegin=§cWkrótce zaczynamy BuildSwap
+buildswap.game.start.themesAreRandom=§cWszystkie tematy są wybierane losowo
+buildswap.game.start.getReady=§cPrzygotuj się
+buildswap.game.start.yourTheme=§cTwój temat to:
+buildswap.round.tie=§cRemis!
+buildswap.round.won=§c%s Wygrał(a)!
+buildswap.round.swap=§cZamiana!
+buildswap.round.swap.force=§cPowiedziałem zamiana!
+buildswap.round.build=§cBUDOWAĆ!
+buildswap.round.secondsRemaining=sekund(y) pozostało/y
+buildswap.round.over=§cRunda %s Zakończona
+buildswap.game.end=§cGra zakończona!
+buildswap.voting.end=§cGłosowanie skończone!
+buildswap.voting.start=§cCzas aby głosować!
+buildswap.voting.start.info=§cNaciśnij dowolną stronę aby na nią zagłosować
 
-buildswap.scoreboard.currentTheme=Current theme
-buildswap.scoreboard.generatingTheme=Generating...
-buildswap.scoreboard.timeRemaining=Time remaining
-buildswap.scoreboard.swap=Swap to the other side!
-buildswap.scoreboard.hurry=Hurry!
+buildswap.scoreboard.currentTheme=Obecny temat
+buildswap.scoreboard.generatingTheme=Generowanie...
+buildswap.scoreboard.timeRemaining=Pozostały czas
+buildswap.scoreboard.swap=Przejdź na drugą stronę!
+buildswap.scoreboard.hurry=Pośpjesz się!
 
-buildswap.tab.header=§bWelcome to Grian Network BuildSwap!
-buildswap.tab.footer=§bRanks, Pets, Spirit Animals and more:
+buildswap.tab.header=§bWitamy w Grian Network BuildSwap!
+buildswap.tab.footer=§bRangi, Zwierzątka, Zwierzęta Duchowe i więcej:
 
 theme.angel=An angel
 theme.axe=An axe
