--- a/ru_ru.properties
+++ b/ru_ru.properties
@@ -2,33 +2,33 @@
 language.region=United States
 language.code=en_us
 
-feedback.invalid.number=§cInvalid number!
-feedback.cancelled=§6Cancelled!
-feedback.success=§6Success!
+feedback.invalid.number=§cНеверное число
+feedback.cancelled=§6Отменено!
+feedback.success=§6Готово!
 feedback.empty=§r
-feedback.only.players=§cOnly players can use this command!
-feedback.noPermission=§cYou don't have permission to do that!
-feedback.command.notAllowed=§c You are not allowed to use that command!
-feedback.unknownPlayer=§cUnknown player!
-feedback.sending.to.server=§9[Games]§f Sending you to %s.
+feedback.only.players=§cТолько игроки могут использовать данную команду.
+feedback.noPermission=§cУ вас нет прав что-бы использовать данную команду!
+feedback.command.notAllowed=§c Вы не можете использовать эту команду!
+feedback.unknownPlayer=§cНеизвестный игрок!
+feedback.sending.to.server=§9[Games]§f Отправляем вас в %s.
 feedback.usage=§6Usage:
 
-feedback.word.combatLog=Combat Log
-feedback.word.end=End
-feedback.word.health=Health
-feedback.word.hearts=hearts
-feedback.word.before=Before
-feedback.word.after=After
-feedback.word.statistics=Statistics
-feedback.word.with=with
-feedback.word.by=by
-feedback.word.wasHurtFor=was hurt for
-feedback.word.change.weather=change the weather
-feedback.word.emeralds=Emeralds
-feedback.word.win=Win
-feedback.word.tie=Tie
-feedback.word.voted=Voted
-feedback.word.ago=ago
+feedback.word.combatLog=Результат битвы
+feedback.word.end=Конец
+feedback.word.health=Здоровье
+feedback.word.hearts=Сердца
+feedback.word.before=До
+feedback.word.after=После
+feedback.word.statistics=Статистики
+feedback.word.with=используя
+feedback.word.by=
+feedback.word.wasHurtFor=получил
+feedback.word.change.weather=изменить погоду
+feedback.word.emeralds=Изумруды
+feedback.word.win=Победа
+feedback.word.tie=Ничья
+feedback.word.voted=Голос засчитан
+feedback.word.ago=
 feedback.word.rewardSummary=Reward Summary
 feedback.word.gameEnded=The game has ended!
 feedback.word.youHaveEarned=You've earned
@@ -38,7 +38,7 @@ feedback.word.players=Players
 
 error.invalid.slot.item=§cError: Invalid %s item!
 
-slot.head=Helmet
+slot.head=Head
 slot.body=Body
 slot.legs=Legs
 slot.feet=Boots
