--- a/BuildSwap/pl_pl.properties
+++ b/BuildSwap/pl_pl.properties
@@ -34,104 +34,104 @@ buildswap.scoreboard.hurry=Pośpjesz się!
 buildswap.tab.header=§bWitamy w Grian Network BuildSwap!
 buildswap.tab.footer=§bRangi, Zwierzątka, Zwierzęta Duchowe i więcej:
 
-theme.angel=An angel
-theme.axe=An axe
-theme.baby=A baby
+theme.angel=Anioł
+theme.axe=Siekiera
+theme.baby=Niemowlę
 theme.grian=Grian
-theme.bee=A bee
-theme.bicycle=A bicycle
-theme.boat=A boat
-theme.heart=A heart
-theme.book=A book
-theme.boy=A boy
-theme.bread=A loaf of bread
-theme.bunny=A bunny
-theme.bus=A bus
-theme.butterfly=A butterfly
-theme.car=A car
-theme.castle=A castle
-theme.cat=A cat
-theme.chair=A chair
-theme.cheese=A cheese
-theme.chocolate=A piece of chocolate
-theme.clock=A clock
-theme.coffee=A cup of coffee
-theme.computer=A computer
-theme.cookie=A cookie
-theme.cow=A cow
-theme.creeper=A creeper
-theme.crocodile=A crocodile
-theme.cupcake=A cupcake
-theme.diamond=A diamond
-theme.dog=A dog
-theme.dolphin=A dolphin
-theme.donut=A donut
-theme.dragonfly=A dragonfly
-theme.egg=An egg
-theme.enderman=An enderman
-theme.firetruck=A firetruck
-theme.fireman=A fireman
-theme.fish=A fish
-theme.fridge=A fridge
-theme.furnace=A furnace
-theme.ghast=A ghast
-theme.giant=A giant
-theme.alien=An alien
-theme.girl=A girl
-theme.hotdog=A hotdog
-theme.house=A house
-theme.jar=A jar
-theme.jellyfish=A jellyfish
-theme.jukebox=A jukebox
-theme.key=A key
-theme.koala=A koala
-theme.lamb=A lamb
-theme.llama=A llama
-theme.mermaid=A mermaid
-theme.monkey=A monkey
-theme.mouse=A mouse
-theme.mushroom=A mushroom
-theme.painting=A painting
-theme.pan=A pan
-theme.panda=A panda
-theme.paper=A paper
-theme.penguin=A penguin
-theme.pizza=A pizza
-theme.planet=A planet
-theme.plate=A plate
-theme.policeman=A policeman
-theme.pony=A pony
-theme.potato=A potato
-theme.present=A present
-theme.radio=A radio
-theme.rusticHouse=A rustic house
-theme.scissors=A pair of scissors
-theme.shoe=A shoe
-theme.shovel=A shovel
-theme.skeleton=A skeleton
-theme.snake=A snake
-theme.snowflake=A snowflake
-theme.snowman=A snowman
-theme.spider=A spider
-theme.squid=A squid
-theme.star=A star
-theme.stone=A stone
-theme.stove=A stove
-theme.sushi=Sushi
-theme.sword=A sword
-theme.train=A train
-theme.tree=A tree
-theme.truck=A truck
-theme.trumpet=A trumpet
-theme.turtle=A turtle
-theme.whale=A whale
-theme.witch=A witch
-theme.wizard=A wizard
-theme.zebra=A zebra
-theme.zombie=A zombie
-theme.oven=An oven
-theme.umbrella=An umbrella
-theme.unicorn=A unicorn
+theme.bee=Pszczoła
+theme.bicycle=Rower
+theme.boat=Lódka
+theme.heart=Serce
+theme.book=Kśiążka
+theme.boy=Chłopak
+theme.bread=Bochenek chleba
+theme.bunny=Królik
+theme.bus=Bus
+theme.butterfly=Motyl
+theme.car=Samochód
+theme.castle=Zamek
+theme.cat=Kot
+theme.chair=Krzesło
+theme.cheese=Ser
+theme.chocolate=Kawałek czekolady
+theme.clock=Zegar
+theme.coffee=Kubek z kawą
+theme.computer=Komputer
+theme.cookie=Ciasteczko
+theme.cow=Krowa
+theme.creeper=Creeper
+theme.crocodile=Krokodyl
+theme.cupcake=Babeczka
+theme.diamond=Diament
+theme.dog=Pies
+theme.dolphin=Delfin
+theme.donut=Pączek
+theme.dragonfly=ważka
+theme.egg=Jajko
+theme.enderman=Enderman
+theme.firetruck=Wóz strażacki
+theme.fireman=Strażak
+theme.fish=Ryba
+theme.fridge=Lodówka
+theme.furnace=Piec
+theme.ghast=Ghast
+theme.giant=Gigant
+theme.alien=Kosmita
+theme.girl=Dziewczyna
+theme.hotdog=Hotdog
+theme.house=Dom
+theme.jar=Słoik
+theme.jellyfish=Meduza
+theme.jukebox=Pudło Muzyczne
+theme.key=Klucz
+theme.koala=Koala
+theme.lamb=Owieczka
+theme.llama=Llama
+theme.mermaid=Syrena
+theme.monkey=Małpa
+theme.mouse=Mysz
+theme.mushroom=Grzyb
+theme.painting=Malowidło
+theme.pan=Patelnia
+theme.panda=Panda
+theme.paper=Papier
+theme.penguin=Pingwin
+theme.pizza=Pizza
+theme.planet=Planeta
+theme.plate=Talerz
+theme.policeman=Policjant
+theme.pony=Kucyk
+theme.potato=Ziemniak
+theme.present=Prezent
+theme.radio=Radio
+theme.rusticHouse=Dom rustykalny
+theme.scissors=Nożyczki
+theme.shoe=But
+theme.shovel=Łopata
+theme.skeleton=Szkielet
+theme.snake=Wąż
+theme.snowflake=Płatek śniegu
+theme.snowman=Bałwan
+theme.spider=Pająk
+theme.squid=Kałamarnica
+theme.star=Gwiazda
+theme.stone=Kamień
+theme.stove=Kuchenka
+theme.sushi=Suszi
+theme.sword=Miecz
+theme.train=Pociąg
+theme.tree=Drzewo
+theme.truck=Ciężarówka
+theme.trumpet=Trąbka
+theme.turtle=Żółw
+theme.whale=Wieloryb
+theme.witch=Wiedźma
+theme.wizard=Czarodziej
+theme.zebra=Zebra
+theme.zombie=Zombi
+theme.oven=Piekarnik
+theme.umbrella=Parasol
+theme.unicorn=Jednorożec
 
 theme2.babyBottle=holding a baby bottle
 theme2.balloon=with a balloon
