--- a/BuildSwap/sv_se.properties
+++ b/BuildSwap/sv_se.properties
@@ -6,213 +6,213 @@ buildswap.opponentLeft=§fDin motspelare lämnade spelet! Vi letar efter en anna
 buildswap.feedback.cannotVote.spectator=Åskådare får inte rösta!
 buildswap.feedback.cannotVote.side=Du får inte rösta på denna sida!
 buildswap.feedback.voted=§f Röstade!
-buildswap.feedback.foundPartnerNoTransfer=§f We found you another partner! Sadly we couldn't transfer your build, so you were given the build of another player. It's something!
-buildswap.feedback.foundPartner=§f We found you another partner!
-buildswap.feedback.opponentsLeft=§f Your opponent(s) left, so you were put into spectator mode.
-buildswap.game.start.aboutToBegin=§cWe are about to begin BuildSwap
-buildswap.game.start.themesAreRandom=§cAll themes are random
-buildswap.game.start.getReady=§cGet ready
-buildswap.game.start.yourTheme=§cYour theme is:
-buildswap.round.tie=§cIt's a tie!
-buildswap.round.won=§c%s won!
-buildswap.round.swap=§cSwap!
-buildswap.round.swap.force=§cI said swap!
-buildswap.round.build=§cBUILD!
-buildswap.round.secondsRemaining=seconds remaining
-buildswap.round.over=§cRound %s Over
-buildswap.game.end=§cGame ended!
-buildswap.voting.end=§cVoting finished!
-buildswap.voting.start=§cTime to vote!
-buildswap.voting.start.info=§cClick any side to vote for it
+buildswap.feedback.foundPartnerNoTransfer=§f Vi hittade en annan motspelare! Tyvärr kan vi inte flytta ditt bygge, så du har fått en annan spelares bygge. Det är iallafall något!
+buildswap.feedback.foundPartner=§f Vi hittade en annan motspelare!
+buildswap.feedback.opponentsLeft=§f Din(a) motståndare lämnade, så vi har satt dig i åskådarläget.
+buildswap.game.start.aboutToBegin=§cVi ska just starta BuildSwap
+buildswap.game.start.themesAreRandom=§cAlla teman är slumpmässiga
+buildswap.game.start.getReady=§cGör er redo
+buildswap.game.start.yourTheme=§cDitt tema är:
+buildswap.round.tie=§cDet blev lika!
+buildswap.round.won=§c%s vann!
+buildswap.round.swap=§cByt!
+buildswap.round.swap.force=§cJag sa byt!
+buildswap.round.build=§cBYGG!
+buildswap.round.secondsRemaining=sekunder kvar
+buildswap.round.over=§cRunda %s Över
+buildswap.game.end=§cSpelet avslutat!
+buildswap.voting.end=§cRöstning avslutad!
+buildswap.voting.start=§cDags att rösta!
+buildswap.voting.start.info=§cKlicka på valfri sida för att rösta
 
-buildswap.scoreboard.currentTheme=Current theme
-buildswap.scoreboard.generatingTheme=Generating...
-buildswap.scoreboard.timeRemaining=Time remaining
-buildswap.scoreboard.swap=Swap to the other side!
-buildswap.scoreboard.hurry=Hurry!
+buildswap.scoreboard.currentTheme=Aktuellt tema
+buildswap.scoreboard.generatingTheme=Genererar...
+buildswap.scoreboard.timeRemaining=Tid kvar
+buildswap.scoreboard.swap=Byt till den andra sidan!
+buildswap.scoreboard.hurry=Skynda!
 
-buildswap.tab.header=§bWelcome to Grian Network BuildSwap!
-buildswap.tab.footer=§bRanks, Pets, Spirit Animals and more:
+buildswap.tab.header=§bVälkommen till Grian Network BuildSwap!
+buildswap.tab.footer=§bRanker, Husdjur, Själsdjur med mera:
 
-theme.angel=An angel
-theme.axe=An axe
-theme.baby=A baby
+theme.angel=En ängel
+theme.axe=En yxa
+theme.baby=En bäbis
 theme.grian=Grian
-theme.bee=A bee
-theme.bicycle=A bicycle
-theme.boat=A boat
-theme.heart=A heart
-theme.book=A book
-theme.boy=A boy
-theme.bread=A loaf of bread
-theme.bunny=A bunny
-theme.bus=A bus
-theme.butterfly=A butterfly
-theme.car=A car
-theme.castle=A castle
-theme.cat=A cat
-theme.chair=A chair
-theme.cheese=A cheese
-theme.chocolate=A piece of chocolate
-theme.clock=A clock
-theme.coffee=A cup of coffee
-theme.computer=A computer
-theme.cookie=A cookie
-theme.cow=A cow
-theme.creeper=A creeper
-theme.crocodile=A crocodile
-theme.cupcake=A cupcake
-theme.diamond=A diamond
-theme.dog=A dog
-theme.dolphin=A dolphin
-theme.donut=A donut
-theme.dragonfly=A dragonfly
-theme.egg=An egg
-theme.enderman=An enderman
-theme.firetruck=A firetruck
-theme.fireman=A fireman
-theme.fish=A fish
-theme.fridge=A fridge
-theme.furnace=A furnace
-theme.ghast=A ghast
-theme.giant=A giant
-theme.alien=An alien
-theme.girl=A girl
-theme.hotdog=A hotdog
-theme.house=A house
-theme.jar=A jar
-theme.jellyfish=A jellyfish
-theme.jukebox=A jukebox
-theme.key=A key
-theme.koala=A koala
-theme.lamb=A lamb
-theme.llama=A llama
-theme.mermaid=A mermaid
-theme.monkey=A monkey
-theme.mouse=A mouse
-theme.mushroom=A mushroom
-theme.painting=A painting
-theme.pan=A pan
-theme.panda=A panda
-theme.paper=A paper
-theme.penguin=A penguin
-theme.pizza=A pizza
-theme.planet=A planet
-theme.plate=A plate
-theme.policeman=A policeman
-theme.pony=A pony
-theme.potato=A potato
-theme.present=A present
-theme.radio=A radio
-theme.rusticHouse=A rustic house
-theme.scissors=A pair of scissors
-theme.shoe=A shoe
-theme.shovel=A shovel
-theme.skeleton=A skeleton
-theme.snake=A snake
-theme.snowflake=A snowflake
-theme.snowman=A snowman
-theme.spider=A spider
-theme.squid=A squid
-theme.star=A star
-theme.stone=A stone
-theme.stove=A stove
+theme.bee=Ett bi
+theme.bicycle=En cyckel
+theme.boat=En båt
+theme.heart=Ett hjärta
+theme.book=En bok
+theme.boy=En pojke
+theme.bread=En limpa bröd
+theme.bunny=En kanin
+theme.bus=En buss
+theme.butterfly=En fjäril
+theme.car=En bil
+theme.castle=Ett slott
+theme.cat=En katt
+theme.chair=En stol
+theme.cheese=En ost
+theme.chocolate=En chokladbit
+theme.clock=En klocka
+theme.coffee=En kopp med kaffe
+theme.computer=En dator
+theme.cookie=En kaka
+theme.cow=En ko
+theme.creeper=En creeper
+theme.crocodile=En krokodil
+theme.cupcake=En muffin
+theme.diamond=En diamant
+theme.dog=En hund
+theme.dolphin=En delfin
+theme.donut=En munk
+theme.dragonfly=En trollslända
+theme.egg=Ett ägg
+theme.enderman=En enderman
+theme.firetruck=En brandbil
+theme.fireman=En brandman
+theme.fish=En fisk
+theme.fridge=Ett kylskåp
+theme.furnace=En masugn
+theme.ghast=En ghast
+theme.giant=En jätte
+theme.alien=En alien
+theme.girl=En tjej
+theme.hotdog=En varmkorv
+theme.house=Ett hus
+theme.jar=En burk
+theme.jellyfish=En manet
+theme.jukebox=En jukebox
+theme.key=En nyckel
+theme.koala=En koala
+theme.lamb=Ett lamm
+theme.llama=En lama
+theme.mermaid=En sjöjungfru
+theme.monkey=En apa
+theme.mouse=En mus
+theme.mushroom=En svamp
+theme.painting=En målning
+theme.pan=En stekpanna
+theme.panda=En panda
+theme.paper=Ett papper
+theme.penguin=En pingvin
+theme.pizza=En pizza
+theme.planet=En planet
+theme.plate=En tallrik
+theme.policeman=En polis
+theme.pony=En ponny
+theme.potato=En potatis
+theme.present=En present
+theme.radio=En radio
+theme.rusticHouse=Ett lantligt hus
+theme.scissors=En sax
+theme.shoe=En sko
+theme.shovel=En spade
+theme.skeleton=Ett skelett
+theme.snake=En orm
+theme.snowflake=En snöflinga
+theme.snowman=En snögubbe
+theme.spider=En spindel
+theme.squid=En bläckfisk
+theme.star=En stjärna
+theme.stone=En sten
+theme.stove=En spis
 theme.sushi=Sushi
-theme.sword=A sword
-theme.train=A train
-theme.tree=A tree
-theme.truck=A truck
-theme.trumpet=A trumpet
-theme.turtle=A turtle
-theme.whale=A whale
-theme.witch=A witch
-theme.wizard=A wizard
-theme.zebra=A zebra
-theme.zombie=A zombie
-theme.oven=An oven
-theme.umbrella=An umbrella
-theme.unicorn=A unicorn
+theme.sword=Ett svärd
+theme.train=Ett tåg
+theme.tree=Ett träd
+theme.truck=En lastbil
+theme.trumpet=En trumpet
+theme.turtle=En sköldpadda
+theme.whale=En val
+theme.witch=En häxa
+theme.wizard=En trollkarl
+theme.zebra=En zebra
+theme.zombie=En zombie
+theme.oven=En ugn
+theme.umbrella=Ett paraply
+theme.unicorn=En enhörning
 
-theme2.babyBottle=holding a baby bottle
-theme2.balloon=with a balloon
-theme2.belt=wearing a belt
-theme2.book=with a book
-theme2.bottle=with a bottle
-theme2.candle=holding a candle
-theme2.cape=wearing a cape
-theme2.cookie=with a cookie
-theme2.earphones=wearing earphones
-theme2.earrings=wearing earrings
-theme2.rod=holding a fishing rod
-theme2.flag=with a flag
-theme2.flower=with a flower
-theme2.console=playing on a game console
-theme2.glass=with a glass
-theme2.hat=wearing a hat
-theme2.headphones=with headphones
-theme2.heaven=in heaven
-theme2.cream=with ice cream
-theme2.laptop=with a laptop
-theme2.microphone=singing into a microphone
-theme2.mug=with a mug
-theme2.necklace=wearing a necklace
-theme2.notebook=with a notebook
-theme2.npc-grian=with NPC-Grian
-theme2.phone=with a phone
-theme2.popcorn=holding popcorn
-theme2.puppy=cuddling a puppy
-theme2.purse=wearing a purse
-theme2.channels=changing channels
-theme2.tortoise=married to a tortoise
-theme2.rollerskates=on rollerskates
-theme2.sandwich=with a sandwich
-theme2.shoes=wearing shoes
-theme2.sombrero=wearing a sombrero
-theme2.sunglasses=wearing sunglasses
-theme2.sweater=wearing a sweater
-theme2.bear=holding a teddy bear
-theme2.teeth=with silly teeth
-theme2.television=and a television
-theme2.wings=wearing wings
-theme2.arms=with many arms
-theme2.dinosaur=holding a yellow dinosaur
+theme2.babyBottle=som håller en bäbisflaska
+theme2.balloon=med en ballong
+theme2.belt=som har på sig ett bälte
+theme2.book=med en bok
+theme2.bottle=med en flaska
+theme2.candle=som håller ett ljus
+theme2.cape=med en mantel
+theme2.cookie=med en kaka
+theme2.earphones=som har på sig hörlurar
+theme2.earrings=som har på sig örhängen
+theme2.rod=hållande ett fiskespö
+theme2.flag=med en flagge
+theme2.flower=med en blomma
+theme2.console=spelande på en spelkonsoll
+theme2.glass=med ett glas
+theme2.hat=som har på sig en hatt
+theme2.headphones=med hörlurar
+theme2.heaven=i himlen
+theme2.cream=med glass
+theme2.laptop=med en laptop
+theme2.microphone=sjungandes i en mikrofon
+theme2.mug=med en mugg
+theme2.necklace=som har på sig ett halsband
+theme2.notebook=med ett anteckningsblock
+theme2.npc-grian=med NPC-Grian
+theme2.phone=med en telefon
+theme2.popcorn=som håller popcorn
+theme2.puppy=som gosar med en hundvalp
+theme2.purse=som har på sig en handväska
+theme2.channels=som ändrar kanal
+theme2.tortoise=om är gift med en sköldpadda
+theme2.rollerskates=på rullskridskor
+theme2.sandwich=med en smörgås
+theme2.shoes=som har på sig skor
+theme2.sombrero=som har på sig en sombrero
+theme2.sunglasses=som har på sig solglasögon
+theme2.sweater=som har på sig en tjöja
+theme2.bear=som håller en teddybjörn
+theme2.teeth=med fåniga tänder
+theme2.television=och en TV
+theme2.wings=som har på sig vingar
+theme2.arms=med många armar
+theme2.dinosaur=som håller en gul dinosaurie
 
-theme3.teeth=brushing their teeth
-theme3.camping=camping
-theme3.crying=crying
-theme3.drinking=drinking
-theme3.driving=driving
-theme3.eating=eating
-theme3.fighting=fighting
-theme3.fishing=fishing
-theme3.school=going to school
-theme3.skating=ice skating
-theme3.radio=listening to the radio
-theme3.telescope=looking through a telescope
-theme3.phonecall=making a phonecall
-theme3.mining=mining
-theme3.painting=painting
-theme3.dog=petting a dog
-theme3.make-up=putting on make-up
-theme3.book=reading a book
-theme3.singing=singing
-theme3.class=sitting in class
-theme3.sleeping=sleeping
-theme3.walking=walking
-theme3.waving=waving
-theme3.writing=writing
-theme3.dancing=dancing
-theme3.hill=rolling down a hill
-theme3.kitchen=in the kitchen
-theme3.laughing=laughing
-theme3.magic=performing magic
-theme3.internet=browsing the internet
-theme3.disasters=playing Disasters
-theme3.house=building a rustic house
-theme3.video=making a video
-theme3.potatoes=growing potatoes
-theme3.inventing=inventing
-theme3.science=performing science
-theme3.potions=brewing potions
-theme3.hair=brushing their hair
-theme3.trees=painting happy little trees
+theme3.teeth=som borstar tänderna
+theme3.camping=som kampar
+theme3.crying=som gråter
+theme3.drinking=som dricker
+theme3.driving=som kör
+theme3.eating=som äter
+theme3.fighting=som slåss
+theme3.fishing=som fiskar
+theme3.school=som går till skolan
+theme3.skating=som åker skridskor
+theme3.radio=som lyssnar på radion
+theme3.telescope=som kollar genom ett teleskop
+theme3.phonecall=som är i ett telefonsamtal
+theme3.mining=som arbetar i gruvan
+theme3.painting=som målar
+theme3.dog=som klappar en hund
+theme3.make-up=som sminkar sig
+theme3.book=som läser en bok
+theme3.singing=som sjunger
+theme3.class=på en lektion
+theme3.sleeping=som sover
+theme3.walking=som går
+theme3.waving=som vinkar
+theme3.writing=som skriver
+theme3.dancing=som dansar
+theme3.hill=som rullar ned en kulle
+theme3.kitchen=i köket
+theme3.laughing=som skrattar
+theme3.magic=som utför magi
+theme3.internet=som surfar internet
+theme3.disasters=som spelar Disasters
+theme3.house=som bygger ett lantligt hus
+theme3.video=som gör en video
+theme3.potatoes=som odlar potatisar
+theme3.inventing=som uppfinner
+theme3.science=som utför vetenskap
+theme3.potions=som brygger magiska drycker
+theme3.hair=som borstar håret
+theme3.trees=som målar små, glada, träd
